--- a/index.html
+++ b/index.html
@@ -28,37 +28,21 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="organized-computer-crime" class="anchor" href="#organized-computer-crime" aria-hidden="true"><span class="octicon octicon-link"></span></a>Organized Computer Crime</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h4>
+<a id="what-we-think-we-know" class="anchor" href="#what-we-think-we-know" aria-hidden="true"><span class="octicon octicon-link"></span></a><em>What we think we know</em>
+</h4>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>Computer crime, like most things related to computing, has mushroomed in recent years due to new found ubiquity of computer and internet technology, leading to the evolution of more sophisticated and organized computer crime endeavors. These groups are as diverse in structure as they are in origin -- very diverse, that is. The stereotype of the lone hacker is quickly vanishing; although solo hackers still do significant damage to computer infrastructure worldwide, the ecosystem of cyber crime is becoming increasingly dominated by bigger players: organizations, collectives, and governments. </p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Despite the increasing sophistication of attackers, attack motivations are mostly the same as they have always been: economical, ideological, and political. Attackers and victims reside all around the globe; there are very few innocent parties, and almost no nations are unaffected by the digital war that is constantly, though subtly raging.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="criminal-organizations" class="anchor" href="#criminal-organizations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Criminal Organizations</h2>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>The standard definition of organized crime coming from the UN Palermo Convention states that it involves a conspiracy of three or more people. Unfortunately, that is one of the few things that can be generalized to encompass all computer crime organizations. The idea of organized crime with which people are the most familiar is that of a criminal hierarchy -- a "crime family". Increasingly, cyber criminals are far less centralized, using anonymity over familiarity as the currency of trust. However, just as nearly all modern businesses have established a web presence, traditional criminal organizations, too, are moving online. As this process continues, the distinction between an online and an offline criminal organization will, doubtless, blur.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/brain-murphy">brain-murphy</a></p>
