Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,7 +57,26 @@
 <p>Some digital criminal activity gains some semblance of centralization when criminals congregate around a hub. A hub almost always consists of a website that facilitates criminal activity on the internet. Often, these sites are simple marketplaces for illicit goods. Websites dealing in illegal drugs, illegal porn, and credit card numbers are common and prosperous. In other cases, a hub might organize its users into a more sophisticated attack force. For example, the Russian-founded DrinkOrDie created a specialized operation that was able to distribute pirated media, including games, movies and music. Their operation consisted of many different jobs, including "crackers", "testers", and "packers". The group had a well defined, rotating leadership, and was able to large profits for its members. However, this centrality eventually led to the demise of DrinkOrDie, as one member revealed the identities of other members when given a bargain by the authorities. Many criminals make use of hubs while maintaining a barrier of anonymity, in order to keep themselves abreast of the catastrophic downfalls for which all criminal organizations seem historically destined.</p>
 
 <h2>
-<a id="governments" class="anchor" href="#governments" aria-hidden="true"><span class="octicon octicon-link"></span></a>Governments</h2>
+<a id="state-sponsored-cyber-crime" class="anchor" href="#state-sponsored-cyber-crime" aria-hidden="true"><span class="octicon octicon-link"></span></a>State Sponsored Cyber Crime</h2>
+
+<p>Although governments may foster different motivations than other perpetrators of computer crime, they have earned the label of cyber crime organizations by enacting some of the most sophisticated and numerous attacks to date. Governments all over the world leverage their resources and intelligence to project their power at military as well as civilian targets. Because the internet has no conventional borders, and cyber warfare no front lines, all of the world's businesses and infrastructure are left to defend against armies of state-sponsored hackers, alone.</p>
+
+<h3>
+<a id="china" class="anchor" href="#china" aria-hidden="true"><span class="octicon octicon-link"></span></a>China</h3>
+
+<p>The People's Republic of China has rapidly become the most apparent threat in computer security (as they have with most things they do). They have earned this designation in part because of the damage that they have been able to inflict upon businesses and governments alike, but also because of the sheer volume of the attacks they produce. Chinese attacks are characterized by large volumes of unsophisticated exploit attempts. Like their military, Chinese cyber warfare divisions achieve success by employing overwhelming numbers of under equipped foot soldiers. Chinese attackers employ brute-force methods and do little to cover their tracks. </p>
+
+<p>Because China does little to stop cyber-criminals that operate in China, it is often difficult for professionals to distinguish between a state sponsored attack and the work of a criminal syndicate. This also works to China's advantage, as it offers a degree of plausible deniability for state-sponsored attacks against private financial entities. As is common in China, the lines between government and public activity often blur. Many security researchers believe that the Chinese hacker group "Comment Crew" is a contractor to the Chinese government. This group was responsible for attacks on several US aerospace companies.</p>
+
+<h3>
+<a id="russia" class="anchor" href="#russia" aria-hidden="true"><span class="octicon octicon-link"></span></a>Russia</h3>
+
+<p>Russia usually appears suspiciously inactive in the cyber-warfare space. However, in full perspective of the situation, Russia is likely one of the most technically advanced entities in state-sponsored computer crime. When Russian hacks are identified, they exhibit high levels of technical prowess and implement advanced methods of evading detection and attribution. There is also evidence to suggest that Russian hackers have used "false-flag" methods of evading attribution, in that they posed as Chinese attackers. Lack of evidence never makes for very strong evidence, but in this case the possibility that Russian attackers are some of the most dangerous in the world isn't belied by the facts.</p>
+
+<h3>
+<a id="united-states-of-america" class="anchor" href="#united-states-of-america" aria-hidden="true"><span class="octicon octicon-link"></span></a>United States of America</h3>
+
+<p>The US has a reputation of producing some of the most sophisticated and well planned exploits in the world, thanks to its bountiful human and monetary resources. US attacks are typically very targeted, compromising as few computers as possible, rather than as many as possible. US exploit code is typically authored by huge teams, revolving around a specific target of national interest. The Stuxnet attack, in which the US is implicated, managed to destroy Iranian nuclear centrifuges from across the world. Most US cyber crime likely revolves around surveillance, but, like Russian activities, most of what we know likely comes from the small percentage of attacks that have been discovered, while many illicit activities could still be still perpetrated without public knowledge. </p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/brain-murphy">brain-murphy</a></p>
